--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prework Study Guide</title>
+    <title>Panda fan site</title>
   </head>
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
-    </header>
+    </header> 
+
     <main>
       <!-- Student code goes here -->
     </main>
 
     <footer>
-      <p>I can code! YEAAAAHH</p>
+      <p>I can code!</p>
     </footer>
+
   </body>
 </html>
