--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </main>
 
     <footer>
-      <p>I can code! Estoy aprendiendo github para mejorar mis habilidades</p>
+      <p>I can code! Estoy aprendiendo github para mejorar mis habilidades...</p>
     </footer>
 
   </body>
