--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-  
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Panda fan site</title>
+  </head>
+  <body>
+    <header id="top">
+      <h1>Prework Study Guide</h1>
+      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+    </header> 
+
+    <section class="card" id="html-section">
+
+    </section>
+ 
+    <section class="card" id="css-section">
+ 
+    </section>
+ 
+    <section class="card" id="git-section">
+ 
+    </section>
+ 
+    <section class="card" id="javascript-section">
+ 
+    </section>
     
-</body>
+    <footer>
+      <p>I can code! Estoy aprendiendo github para mejorar mis habilidades...</p>
+    </footer>
+
+  </body>
 </html>
