updating index with feature branch

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </section>
 
     <footer>
-      <p>I can code! Estoy aprendiendo github para mejorar mis habilidades...</p>
+      <p>I can code! Estoy aprendiendo github para mejorar mis habilidades... and I am doing this with another branch</p>
     </footer>
 
   </body>
