--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Panda fan site</title>
     <link rel="stylesheet" href="./assets/style.css">
+    
+
   </head>
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header> 
 
     <section class="card" id="html-section">
@@ -44,5 +47,6 @@
       <p>I can code! Estoy aprendiendo github para mejorar mis habilidades... and I am doing this with another branch</p>
     </footer>
 
+    <script src="assets/scripts/main.js"></script>
   </body>
 </html>
